<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/attendance"
            android:id="@+id/attendance_id"
            android:icon="@drawable/battery" />

        <item
            android:title="@string/marks"
            android:id="@+id/marks_id"
            android:icon="@drawable/chart" />

        <item
            android:title="@string/student_activities"
            android:id="@+id/student_activities_id"
            android:icon="@drawable/account" />

        <item
            android:title="@string/resources"
            android:id="@+id/resources_id"
            android:icon="@drawable/account" />

        <item
            android:title="@string/almanac"
            android:id="@+id/almanac_id"
            android:icon="@drawable/calendar" />

        <item
            android:title="@string/vision"
            android:id="@+id/vision_id"
            android:icon="@drawable/binoculars" />

        <item
            android:title="@string/mission"
            android:id="@+id/mission_id"
            android:icon="@drawable/alarm" />

        <item
            android:title="@string/about_us"
            android:id="@+id/about_us_id"
            android:icon="@drawable/multiple" />

    </group>

</menu>